# django-openstack-auth-kerberos

./: .coveragerc  .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  groups  openstack-common.conf  project.config  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
data/: login-redirect.html
doc/ext/: apidoc.py
doc/source/: api.rst  conf.py  history.rst  index.rst  installation.rst  usage.rst
openstack_auth_kerberos/: __init__.py  backend.py  plugin.py  urls.py  views.py
openstack_auth_kerberos/tests/: settings.py  test_openstack_auth_kerberos.py
