[metadata]
name = django-openstack-auth-kerberos
summary = Kerberos login to the OpenStack dashboard
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://github.com/jamielennox/django-openstack-auth-kerberos
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    openstack_auth_kerberos

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = openstack_auth_kerberos/locale
domain = openstack_auth_kerberos

[update_catalog]
domain = openstack_auth_kerberos
output_dir = openstack_auth_kerberos/locale
input_file = openstack_auth_kerberos/locale/django-openstack-auth-kerberos.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = openstack_auth_kerberos/locale/openstack_auth_kerberos.pot

[wheel]
universal = true
